2005-11-13  Derek Atkins  <derek@ihtfp.com>

	* src/core-utils/gnc-gkeyfile-utils.c: cast the
	  printf so we don't warn when sizeof(ssize_t) !=
	  sizeof(int).  In this case the cast is safe because
	  we can only write an int-size of data.

2005-11-13  Neil Williams <linux@codehelp.co.uk>

	* src/backend/file/sixtp.c : Remove deprecated
	SAX function. Closes bug #319559.

2005-11-13  Neil Williams <linux@codehelp.co.uk>

	* make-gncuash-potfiles.in : Add a specific
	call to read one libqof file.
	* po/POTFILES.in : the updated POTFILES list.

2005-11-13  Neil Williams <linux@codehelp.co.uk>

	* configure.in : New locations of QOF files and
	postgres fix to clean up CFLAGS
	* lib/Makefile.am : New directory.
	* src/engine/Makefile.am : Remove QOF build
	* src/backend/Makefile.am : Remove QSF directory.
	* src/backend/postgres/test/Makefile.am : Build tests
	without linking against the GModule to retain portability.
	* src/import-export/qif-import/test/Makefile.am : Adjusted
	linkage due to library changes.
	* src/gnome-utils/test/Makefile.am : Adjusted linkage
	due to library changes.

	Moving QSF to lib/libqof/backend/file
	* src/backend/qsf/qsf-backend.c
	* src/backend/qsf/pilot-qsf-GnuCashInvoice.xml
	* src/backend/qsf/qsf-dir.h.in
	* src/backend/qsf/qsf-map.xsd.xml
	* src/backend/qsf/qsf-xml-map.c
	* src/backend/qsf/qof-backend-qsf.h
	* src/backend/qsf/qsf-xml.c
	* src/backend/qsf/Makefile.am
	* src/backend/qsf/qsf-object.xsd.xml
	* src/backend/qsf/qsf-xml.h :

	Moving QOF to lib/libqof/qof/
	* src/engine/qofbook-p.h
	* src/engine/gnc-trace.c
	* src/engine/qofquery-deserial.h
	* src/engine/gnc-trace.h
	* src/engine/gnc-date.c
	* src/engine/qofquerycore-p.h
	* src/engine/gnc-date.h
	* src/engine/qofquery-serialize.c
	* src/engine/qofid.c
	* src/engine/qofquery-serialize.h
	* src/engine/qofid.h
	* src/engine/gnc-engine-util.c
	* src/engine/gnc-event.c
	* src/engine/qofgobj.c
	* src/engine/gnc-engine-util.h
	* src/engine/gnc-event.h
	* src/engine/qofgobj.h